Fix jumping header and footer

--- a/front/src/components/Footer/Footer.css
+++ b/front/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@ footer {
   left: 0;
   right: 0;
   width: 100%;
-  height: 3%;
+  height: 20px;
   background-color: #74c69d;
   display: flex;
   justify-content: center;
